- added support mssql\postgres - added internal settings repository - added settings crud api - added tab settings configuration
