# swagger.json
@@ -55,6 +55,33 @@
                 }
             }
         },
+        "/setting": {
+            "get": {
+                "summary": "Get all config rows",
+                "description": "",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "properties": {
+                                    "id":{
+                                        "type": "number"
+                                    },
+                                    "key": {
+                                        "type": "string"
+                                    },
+                                    "value": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/configs": {
             "get": {
                 "summary": "Get all config rows",
